name: lph
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
maintainer: Ilya Klyuchnikov
description: Dependently typed lambda calculus
data-dir: ""

executable st
    build-depends: base >=4.6, mtl >=2.1.2, parsec >=3.1.3,
                   pretty >=1.1.1.0, readline >=1.0.3.0
    main-is: Lambda/Main.hs
    buildable: True
    hs-source-dirs: .
    other-modules: Common REPL Lambda.Check Lambda.AST Lambda.Eval
    ghc-options: -main-is Lambda.Main
 
executable lp
    build-depends: base >=4.6, mtl >=2.1.2, parsec >=3.1.3,
                   pretty >=1.1.1.0, readline >=1.0.3.0
    main-is: LambdaPi/Main.hs
    buildable: True
    hs-source-dirs: .
    other-modules: Common REPL LambdaPi.Quote LambdaPi.Parser
                   LambdaPi.Check LambdaPi.AST LambdaPi.Eval LambdaPi.Main
                   LambdaPi.Printer
    ghc-options: -main-is LambdaPi.Main
 