cabal-version: 3.0
name: lph
version: 0.1
build-type: Simple
maintainer: Ilya Klyuchnikov
description: Dependently typed lambda calculus

executable st
    build-depends:
        base >=4.9.1.0,
        mtl >=2.2.1,
        parsec >=3.1.11,
        pretty >=1.1.3.5
    main-is:
        Lambda/Main.hs
    buildable:
        True
    hs-source-dirs:
        src
    other-modules:
        Common
        REPL
        Lambda.AST
        Lambda.Check
        Lambda.Eval
        Lambda.Parser
        Lambda.Printer
        Lambda.Quote
    ghc-options: -main-is Lambda.Main
    default-language: Haskell2010

executable lp
    build-depends:
        base >=4.9.1.0,
        mtl >=2.2.1,
        parsec >=3.1.11,
        pretty >=1.1.3.5
    main-is: LambdaPi/Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules:
        Common
        REPL
        LambdaPi.AST
        LambdaPi.Check
        LambdaPi.Eval
        LambdaPi.Parser
        LambdaPi.Printer
        LambdaPi.Quote
    ghc-options: -main-is LambdaPi.Main
    default-language: Haskell2010
